[package]
name = "monet-next"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.1"
futures = "0.3.32"
hyper = { version = "1.8.1", features = ["http1", "client", "server"] }

monoio-compat = { version = "0.2.2", features = ["hyper"] }
monoio = { version = "0.2.4", default-features = false, features = [
    "async-cancel",
    "sync",
    "bytes",
    "iouring",
    "legacy",
    "macros",
    "utils",
    "poll-io",      # experimental
] }
http-body-util = "0.1.3"
compio = { version = "0.18.0", features = ["io-compat", "net"] }
socket2 = "0.6.2"
send_wrapper = "0.6.0"
futures-util = "0.3.32"
