[package]
name = "monet-next"
version = "0.1.0"
edition = "2024"

[dependencies]
compio = { version = "0.18.0", features = ["io-compat", "net", "macros"] }
bytes = "1.11.1"
futures = "0.3.32"
hyper = { version = "1.8.1", features = ["http1", "server"] }
http-body-util = "0.1.3"
socket2 = "0.6.2"
send_wrapper = "0.6.0"
futures-util = "0.3.32"
